<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sample_fragment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Sample Fragment" />
        <item
            android:id="@+id/nav_big_button"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Big Button" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
